# camera_robot_calibration

./: CMakeLists.txt  package.xml  plugin_description.xml
include/camera_robot_calibration/: CalibrationPanel.h
launch/: capture_points.launch
rviz/: calibration.rviz
src/: CalibrationPanel.cpp
